<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".registrar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtIdRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:textColorHint="@color/colorAccent"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtNombreRegister"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:textColorHint="@color/colorAccent"
            android:textColor="#fff"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:ems="10"
            android:textColorHint="@color/colorAccent"
            android:textColor="#fff"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:textColorHint="@color/colorAccent"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/botonesalternativo"
            android:hint="@string/registrar"
            android:onClick="BtnRegistrar"
            android:text="@string/registrar"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>