<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".tablero">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FECDE2"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/nombre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FECDE2"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/nivel"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/botonesalternativo"
                android:onClick="cerrarSesion"
                android:text="@string/cerrar"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FECDE2"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/XP"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvXP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/XP"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FECDE2"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/score"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTablero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="#FECDE2"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/Juguemos"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layoutBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" />
        </ScrollView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>